MLIS Project Tweak

--- a/mlis/portfolio/projects.html
+++ b/mlis/portfolio/projects.html
@@ -78,6 +78,7 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
         <p><strong>Class: </strong>LIS 60030: People in the Information Ecology (Fall 2018)</p>
         <p>This course project focused on analysis and assessment of a particular user group. I synthesized current research on information behaviors and needs of museum website users in order to identify actionable recommendations for more effective museum website design. My main takeaway was the importance of providing users with multiple services and modes of interaction with the museum's online collection.</p>
         <p><strong><a href="{{ 'mlis/portfolio/downloads/NeedsAssesment_KRogers2018.pdf' | relative_url }}">Needs Assessment PDF</a></strong></p>
+        <p><em><a href="https://unsplash.com/photos/XJXWbfSo2f0">Image Source</a></em></p>
       </div>
     </div>
   </div>
