Update resume and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@ permalink: /portfolio/
     </div>
 
 
-    <div id="genealogy" class="example">
+    <!--<div id="genealogy" class="example">
       <div class="example-pic"></div>
         <div class="example-text">
           <a class="link-header" href="https://krogersst.github.io/landgren-collins">
@@ -49,7 +49,7 @@ permalink: /portfolio/
           <div class="link-sub"><span>A project charting the genealogy of the Landgren and Collins families.</span></div>
         <p>This ongoing personal project was born out of my work with the Kenton County Public Library's Local History and Genealogy Department. It features an interactive family tree and numerous resources I've collected about my maternal grandmother's family.</p>
         </div>
-    </div>
+    </div>-->
 
     <div id="tutorial" class="example">
           <div class="example-pic"></div>
