--- a/mlis/spadefoot/thelibrary.html
+++ b/mlis/spadefoot/thelibrary.html
@@ -56,14 +56,11 @@ permalink: /mlis/spadefoot/thelibrary
     <div id="tabs-6" class="library-tabs">
       <h4>Other Sources</h4>
       <ul>
-        <li><a href="https://www.inaturalist.org/observations/24793788">iNaturalist Example</a></li>
-        <li><a href="http://www.lewis-clark.org/article/2751">Richard Harlan</a></li>
-        <li><a href="https://www.semanticscholar.org/paper/Remarking-on-a-blackened-eye%3A-Persifor-Frazer's-of-Brinkman/9d2745dcd1dbde6e1e681285ea1d5bae45277fa0">Edward Drinker Cope</a></li>
-        <li><a href='http://research.amnh.org/vz/herpetology/amphibia/Amphibia/Anura/Scaphiopodidae/Scaphiopus/Scaphiopus-holbrookii'><em>Scaphipus holbrookii</em></a>. Amphibian Species of the World 6.0, an Online Reference. American Museum of Natural History</li>
-        <li><a href="https://www.inaturalist.org/observations?place_id=any&taxon_id=26695">iNaturalist Distrubtion of Eastern Spadefoots</a></li>
+        <li><a href="https://www.inaturalist.org/observations?place_id=any&taxon_id=26695">iNaturalist Distribution of Eastern Spadefoots</a></li>
+        <li><a href='http://research.amnh.org/vz/herpetology/amphibia/Amphibia/Anura/Scaphiopodidae/Scaphiopus/Scaphiopus-holbrookii'>Scaphiopus holbrookii</a>. <em>Amphibian Species of the World 6.0, an Online Reference.</em> American Museum of Natural History.</li>
         <li>Patterson, D., Thompson, R., & Bryson, J. S. (2008). John Edwards Holbrook. In <a href='https://www.worldcat.org/title/early-american-nature-writers-a-biographical-encyclopedia/oclc/1034888234'>Early American nature writers : a biographical encyclopedia</a> (pp. 192-200). Westport, CT: Greenwood Press.</li>
         <li>The Library Company of Philadelphia. <a href='https://digital.librarycompany.org/islandora/object/digitool%3A79451'>Lehman & Duval</a>. Philadelphia on Stone > Philadelphia on Stone Biographical Dictionary of Lithographers</li>
-        <li> Beane, J. C. et al. (2010) <a href='https://www.worldcat.org/title/amphibians-reptiles-of-the-carolinas-and-virginia/oclc/929634288'>Amphibians and Reptiles of the Carolinas and Virginia</a>, 2nd Ed. Chapel Hill, NC: University of North Carolina Press.</li>
+        <li> Beane, J. C. et al. (2010). <em><a href='https://www.worldcat.org/title/amphibians-reptiles-of-the-carolinas-and-virginia/oclc/929634288'>Amphibians and Reptiles of the Carolinas and Virginia</a></em>, 2nd Ed. Chapel Hill, NC: University of North Carolina Press.</li>
       </ul>
     </div>
 
@@ -123,14 +120,11 @@ permalink: /mlis/spadefoot/thelibrary
     <h3>Other Sources</h3>
     <div class="library-tabs">
       <ul>
-        <li><a href="https://www.inaturalist.org/observations/24793788">iNaturalist Example</a></li>
-        <li><a href="http://www.lewis-clark.org/article/2751">Richard Harlan</a></li>
-        <li><a href="https://www.semanticscholar.org/paper/Remarking-on-a-blackened-eye%3A-Persifor-Frazer's-of-Brinkman/9d2745dcd1dbde6e1e681285ea1d5bae45277fa0">Edward Drinker Cope</a></li>
-        <li><a href='http://research.amnh.org/vz/herpetology/amphibia/Amphibia/Anura/Scaphiopodidae/Scaphiopus/Scaphiopus-holbrookii'><em>Scaphipus holbrookii</em></a>. Amphibian Species of the World 6.0, an Online Reference. American Museum of Natural History</li>
-        <li><a href="https://www.inaturalist.org/observations?place_id=any&taxon_id=26695">iNaturalist Distrubtion of Eastern Spadefoots</a></li>
+        <li><a href="https://www.inaturalist.org/observations?place_id=any&taxon_id=26695">iNaturalist Distribution of Eastern Spadefoots</a></li>
+        <li><a href='http://research.amnh.org/vz/herpetology/amphibia/Amphibia/Anura/Scaphiopodidae/Scaphiopus/Scaphiopus-holbrookii'>Scaphiopus holbrookii</a>. <em>Amphibian Species of the World 6.0, an Online Reference.</em> American Museum of Natural History.</li>
         <li>Patterson, D., Thompson, R., & Bryson, J. S. (2008). John Edwards Holbrook. In <a href='https://www.worldcat.org/title/early-american-nature-writers-a-biographical-encyclopedia/oclc/1034888234'>Early American nature writers : a biographical encyclopedia</a> (pp. 192-200). Westport, CT: Greenwood Press.</li>
         <li>The Library Company of Philadelphia. <a href='https://digital.librarycompany.org/islandora/object/digitool%3A79451'>Lehman & Duval</a>. Philadelphia on Stone > Philadelphia on Stone Biographical Dictionary of Lithographers</li>
-        <li> Beane, J. C. et al. (2010) <a href='https://www.worldcat.org/title/amphibians-reptiles-of-the-carolinas-and-virginia/oclc/929634288'>Amphibians and Reptiles of the Carolinas and Virginia</a>, 2nd Ed. Chapel Hill, NC: University of North Carolina Press.</li>
+        <li> Beane, J. C. et al. (2010). <em><a href='https://www.worldcat.org/title/amphibians-reptiles-of-the-carolinas-and-virginia/oclc/929634288'>Amphibians and Reptiles of the Carolinas and Virginia</a></em>, 2nd Ed. Chapel Hill, NC: University of North Carolina Press.</li>
       </ul>
     </div>
 
