--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ header-pic: kelsey_header.png
 header-pic-alt: kelsey_header_alt.png
 ---
 
-<p>Hi all! I’m Kelsey Rogers. I'm the curator for Bay Village Historical Society in Northeast Ohio where I get to spend time doing everything from digitization and cataloging to exhibit design and content creation.</p>
+<p>Hi all! I’m Kelsey Marie Rogers. I'm the curator for Bay Village Historical Society in Northeast Ohio where I get to spend time doing everything from digitization and cataloging to exhibit design and content creation.</p>
 
 <p>Although I've spent the past few years in Ohio, I’m originally from the Missouri Ozarks where my love for digital cultural heritage began. My rural middle school received a grant that gave every student access to a computer, and with it, the internet. We now had access to a whole new world. This early experience emphasized the power that digital access to cultural heritage resources can have. Even museum and library websites in the early 2000's gave us inspiring and engaging access to resources we otherwise wouldn't have been exposed to.</p>
 
