--- a/contact.html
+++ b/contact.html
@@ -6,29 +6,31 @@ header-pic: toadstools_header.png
 header-pic-alt: toadstools_header_alt.png
 ---
 
-<p>I am particularly interested in creating and supporting digital cultural and natural heritage projects. These online initiatives are essential to providing access to the wonderful resources and collections found all around the world and I would love to create the next generation of engaging and interactive digital library projects.</p>
-<p>Do you have a digital heritage project you'd like to see come to life?</p>
-<p>Send me a message and let's talk!</p>
-
 <div id="contact">
+<h4>Send me an email at <a href="mailto:kelsey@kelseymarierogers.com">kelsey@kelseymarierogers.com</a> with questions, ideas, or just a brief overview of the project or programming you're looking for.</h4>
+<h4>I'd love to hear from you about:</h4>
+<div id="contact-descriptions">
+<h3>Website Design</h3>
+<ul>
+  <li>Creative online exhibits</li>
+  <li>Unique ecommerce websites for small businesses</li>
+  <li>Beautiful and user-friendly websites for small non-profits</li>
+</ul>
 
-<form
-  action="https://formspree.io/xeqepkrr"
-  method="POST"
->
-  <label>
-    <h4>Your email:</h4>
-    <input type="text" name="_replyto">
-  </label>
+<h3>Hikes and Programs</h3>
+<ul>
+  <li>STEAM-focused nature programming</li>
+  <li>Urban/suburban nature walks</li>
+  <li>Nature journaling</li>
+  <li>Mushrooms, millipedes, slugs, and snails</li>
+</ul>
 
-  <label>
-    <h4>Your message:</h4>
-    <textarea name="message"></textarea>
-  </label>
-
-  <!-- your other form fields go here -->
-
-  <button type="submit"><h4>Send</h4></button>
-</form>
+<h3>Family History and Genealogy</h3>
+<ul>
+  <li>Family history website design</li>
+  <li>One-on-one genealogy intro sessions</li>
+  <li>Family photography collection wrangling</li>
+</ul>
+</div>
 
 </div>
