--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,15 @@ header-pic-alt: toadstools_header_alt.png
 <h4>Send me an email at <a href="mailto:kelsey@kelseymarierogers.com">kelsey@kelseymarierogers.com</a> with questions, ideas, or just a brief overview of the project or programming you're looking for.</h4>
 <h4>I'd love to hear from you about:</h4>
 <div id="contact-descriptions">
+
+<h3>Hikes and Programs</h3>
+<ul>
+  <li>Urban/suburban nature walks</li>
+  <li>Nature journaling and art</li>
+  <li>Cultural histories of native flora and fungi</li>
+  <li>Mushrooms, millipedes, slugs, and snails</li>
+</ul>
+
 <h3>Website Design</h3>
 <ul>
   <li>Creative online exhibits</li>
@@ -17,13 +26,7 @@ header-pic-alt: toadstools_header_alt.png
   <li>Beautiful and user-friendly websites for small non-profits</li>
 </ul>
 
-<h3>Hikes and Programs</h3>
-<ul>
-  <li>STEAM-focused nature programming</li>
-  <li>Urban/suburban nature walks</li>
-  <li>Nature journaling</li>
-  <li>Mushrooms, millipedes, slugs, and snails</li>
-</ul>
+
 
 <h3>Family History and Genealogy</h3>
 <ul>
