--- a/about.html
+++ b/about.html
@@ -14,7 +14,9 @@ header-pic-alt: kelsey_header_alt.png
 
 <p>I'm now in the greater Cleveland area, looking at urbanized life through the lens of a semi-feral rural Ozarks kid, finding nature popping up in unexpected places and realizing that the city and mother nature aren't so much separate as they are co-habitants. Mushrooms pop up in golf courses, in tree lawns, in parking lots. Birds nest in strip malls. Cormorants catch catfish in the shadow of the Rock and Roll Hall of Fame.</p>
 
-<p>I want to create and share those tools of discovery, whether they be digitial or physical or a combination of both. If you want help creating, managing, and sharing your stories, the stories of your collection, and providing access to resources in engaging and innovative ways in both the digital and physical worlds, drop me a line at kelsey@kelseymarierogers.com. From <a href="{{ site.baseurl }}/mlis/spadefoot/home">natural history</a> to <a href="http://visualizingabolition.org">digital humanities</a>, I would love to help you bring your institution's resources to life.</p>
+<p>I want to create and share tools for discovery. Those tools can be the digital or physical such as websites and books. But they can also be interpersonal, ways of using the senses, of seeing and slowing down, of learning to be aware of the body, learning the stories of the commonplace, awakening wonder and creativity in all ages.</p>
+
+<p>If you want help creating, managing, and sharing your stories, the stories of your collection, and providing access to heritage and resources in engaging and innovative ways in both the digital, physical, and interpersonal worlds, drop me a line at kelsey@kelseymarierogers.com. From <a href="{{ site.baseurl }}/mlis/spadefoot/home">natural history</a> to <a href="http://visualizingabolition.org">digital humanities</a>, I would love to help you bring your institution's resources to life.</p>
 
 <div id="about-links" class="spadefoot-header">
 <div class="spadefoot-links">
