--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ header-pic-alt: toadstools_header_alt.png
 
 <h3>Hikes and Programs</h3>
 <ul>
-  <li>Urban/suburban nature walks</li>
+  <li>LGBTQ+ nature programming</li>
   <li>Nature journaling and art</li>
   <li>Cultural histories of native flora and fungi</li>
   <li>Mushrooms, millipedes, slugs, and snails</li>
